update DESCRIPTION, fix (hopefully) vignette problems

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,33 +1,32 @@
 Package: finalprojectgroup2
 Title: Multi-Path Forward Selection with AIC and Stability Analysis
 Version: 0.0.1
-Authors@R: 
+Authors@R:
     c(
-      person("Cooper", "Niebuhr", email = "cwn0015@auburn.edu", role = c("aut", "cre")),
+      person("Cooper", "Niebuhr",email = "cwn0015@auburn.edu", role = c("aut", "cre")),
       person("Zack", "Miller", email = "zzm0028@auburn.edu", role = "aut"),
       person("Janset", "Aksoy", email = "jza0100@auburn.edu", role = "aut")
     )
 Description: Provides multi-path forward selection using AIC.
-    Unlike traditional stepwise regression, this procedure explores multiple 
-    near-optimal model paths, identifies instability via resampling-based 
-    selection, and filters down to models that are both AIC competitive 
+    Unlike traditional stepwise regression, this procedure explores multiple
+    near-optimal model paths, identifies instability via resampling-based
+    selection, and filters down to models that are both AIC competitive
     and stable across bootstrap replicates.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.3
-
+RogygenNote: 7.3.3
 Imports:
     stats,
     methods,
     ggplot2,
     dplyr,
-    tidyr
-
+    tidyr,
+    purrr,
+    care,
+    reshape2
 Suggests:
     knitr,
-    rmarkdown,
-    care
-
+    rmarkdown
 VignetteBuilder: knitr
